Now use sse for keeping activity up-to-date
